--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "datetime.date(2016, 8, 23)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,15 +324,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (707245430.py, line 3)",
+     "evalue": "unexpected EOF while parsing (1725608640.py, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\colle\\AppData\\Local\\Temp\\ipykernel_14420\\707245430.py\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    filter((Measurement.date >= year_ago).all()\u001b[0m\n\u001b[1;37m                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\colle\\AppData\\Local\\Temp\\ipykernel_14420\\1725608640.py\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1354,13 +1354,16 @@
        " ...]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results\n"
+    "results\n",
+    "\n",
+    "# prcp_rows=[{result[0], result[1] for result in results}]\n",
+    "# prcp_rows"
    ]
   },
   {
@@ -1741,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1772,6 +1775,7 @@
     "plt.ylabel(\"Freqeuncy\")\n",
     "plt.legend([\"tobs\"])\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"Resources/station_analysis.png\")\n",
     "plt.show()\n"
    ]
   },
@@ -1784,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
