start/end app.py

--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "datetime.date(2016, 8, 23)"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,17 +345,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 187,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (2875523968.py, line 5)",
+     "evalue": "unexpected EOF while parsing (1072133748.py, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\colle\\AppData\\Local\\Temp\\ipykernel_14420\\2875523968.py\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    results\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\colle\\AppData\\Local\\Temp\\ipykernel_14420\\1072133748.py\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
@@ -363,13 +363,12 @@
     "# Perform a query to retrieve the data and precipitation scores\n",
     "results= session.query(Measurement.date, Measurement.prcp).\\\n",
     "                filter((Measurement.date >= date).all()\n",
-    "                       \n",
-    "results                    "
+    "                                      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1377,7 @@
        " ...]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1694,7 +1693,9 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
