--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 78,
    "metadata": {
     "scrolled": true
    },
@@ -1380,6 +1380,7 @@
     "plt.ylabel(\"Inches\")\n",
     "plt.title(f\"Precipitation Analysis in Honolulu, Hawaii\\n (08-23-2016 to 08-23-2017)\")\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"Images/prcp_analysis.png\")\n",
     "plt.show()\n",
     "\n"
    ]
@@ -1593,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1636,7 @@
     "plt.ylabel(\"Freqeuncy\")\n",
     "plt.legend([\"tobs\"])\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"Resources/station_analysis.png\")\n",
+    "plt.savefig(\"Images/station_analysis.png\")\n",
     "plt.show()\n"
    ]
   },
